--- a/src/App.css
+++ b/src/App.css
@@ -297,8 +297,8 @@ select {
 
 .carousel-item h2 {
   position: absolute;
-  top: 40%;
-  left: 35%;
+  top: 41%;
+  left: 33%;
   color: #000;
   color: rgba(0, 0, 0, 0.4);
   font-size: 50px;
@@ -468,6 +468,7 @@ select {
   top: 32%;
   left: 45%;
   margin: -25px 0 0 -25px;
+  margin-left: -30px;
 }
 
 .container-order-1 > .text-img1 {
@@ -495,6 +496,7 @@ select {
   top: 32%;
   left: 45%;
   margin: -25px 0 0 -25px;
+  margin-left: -30px;
 }
 
 .container-order-2 > .text-img2 {
@@ -521,6 +523,7 @@ select {
   top: 32%;
   left: 45%;
   margin: -25px 0 0 -25px;
+  margin-left: -30px;
 }
 
 .container-order-3 > .text-img3 {
@@ -547,6 +550,7 @@ select {
   top: 32%;
   left: 45%;
   margin: -25px 0 0 -25px;
+  margin-left: -33px;
 }
 
 .container-order-4 > .text-img4 {
