--- a/src/App.css
+++ b/src/App.css
@@ -270,6 +270,7 @@ select {
   transition: all 0.5s ease-in-out;
   border-radius: 6%;
 }
+
 .arrow {
   border: solid grey;
   border-width: 0 3.5px 3.5px 0;
@@ -278,6 +279,19 @@ select {
   margin-left: -15px;
   margin-right: -15px;
 }
+
+.arrow:focus {
+  background-color: transparent;
+}
+
+.arrow-next:focus {
+  background-color: transparent;
+}
+
+.arrow-prev:focus {
+  background-color: transparent;
+}
+
 .arrow-prev {
   left: 30px;
   position: absolute;
@@ -302,6 +316,12 @@ select {
   color: #000;
   color: rgba(0, 0, 0, 0.4);
   font-size: 50px;
+
+  user-select: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
 .item-1 {
